--- a/scs_go_flutter/pubspec.yaml
+++ b/scs_go_flutter/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   # QR Code
   qr_flutter: ^4.1.0
   
+  # HTTP Client
+  http: ^1.2.0
+  
   # Utils
   intl: ^0.19.0
   shared_preferences: ^2.2.2
