--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@
 
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+# OpenChargeMap API Configuration
+# Get key from: https://openchargemap.org/site/develop/api
+VITE_OPENCHARGE_MAP_API_KEY=your-api-key-here
+VITE_OPENCHARGE_MAP_BASE_URL=https://api.openchargemap.io/v3
