feat: Add PWA support for iOS with app icons and meta tags
- Generate iOS app icons (180x180, 152x152, 120x120px PNG)
- Add apple-touch-icon links for multiple sizes
- Update manifest.json to use PNG icons
- Add mobile-web-app-capable meta tag
- Install sharp for icon generation

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,19 +9,23 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/logo.jpg",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo.jpg",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "categories": ["utilities", "navigation", "lifestyle"],
+  "categories": [
+    "utilities",
+    "navigation",
+    "lifestyle"
+  ],
   "screenshots": [],
   "shortcuts": [
     {
@@ -29,14 +33,24 @@
       "short_name": "Tìm trạm",
       "description": "Tìm trạm sạc gần bạn",
       "url": "/explore",
-      "icons": [{ "src": "/logo.jpg", "sizes": "96x96" }]
+      "icons": [
+        {
+          "src": "/logo.jpg",
+          "sizes": "96x96"
+        }
+      ]
     },
     {
       "name": "Lịch đặt chỗ",
       "short_name": "Đặt chỗ",
       "description": "Xem lịch đặt chỗ của bạn",
       "url": "/dashboard/bookings",
-      "icons": [{ "src": "/logo.jpg", "sizes": "96x96" }]
+      "icons": [
+        {
+          "src": "/logo.jpg",
+          "sizes": "96x96"
+        }
+      ]
     }
   ]
 }
