--- a/scs_go_flutter/pubspec.yaml
+++ b/scs_go_flutter/pubspec.yaml
@@ -24,8 +24,10 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.9
   
-  # Location
+  # Location & Maps
   geolocator: ^10.1.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
   
   # Supabase
   supabase_flutter: ^2.3.0
@@ -40,6 +42,8 @@ dependencies:
   intl: 0.19.0
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.2
+  path_provider: ^2.1.1
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
